--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   </head>
   <body>
     <main>
+      <img src="logo.png" alt="logo">
       <h1>elrincondelchipa.com</h1>
       <p>Our website is under construction.</p>
     </main>
