--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </head>
   <body>
     <main>
-      <img src="https://imgur.com/VDVpifH.png" alt="logo">
+      <img src="https://imgur.com/VDVpifH.png" alt="logo", width="500">
       <h1>elrincondelchipa.com</h1>
       <p>Our website is under construction.</p>
     </main>
